// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button image 1`] = `
<button
  className="button-image button--primary"
  onClick={[Function]}
  type="button"
>
  <img
    alt="button logo"
    src="cancel.svg"
  />
</button>
`;

exports[`Storyshots Button image-circle 1`] = `
<button
  className="button-image button-image--circle button--primary"
  onClick={[Function]}
  type="button"
>
  <img
    alt="button logo"
    src="cancel.svg"
  />
</button>
`;

exports[`Storyshots Button text 1`] = `
<button
  className="button button--primary"
  onClick={[Function]}
  type="button"
>
  Manage Currencies
</button>
`;

exports[`Storyshots Card long 1`] = `
<li
  className="card"
>
  <div
    className="card__header"
  >
    <p
      className="medium"
    >
      KM
    </p>
    <p
      className="large"
    >
      BAM
    </p>
  </div>
  <p
    className="medium"
  >
    Bosnia-Herzegovina Convertible Mark
  </p>
  <p
    className="large"
  >
    1 NGN - 0.004900 BAM
  </p>
</li>
`;

exports[`Storyshots CurrencyChooser clear after button click 1`] = `
<form
  className="currency-chooser"
  onSubmit={[Function]}
>
  <div
    className="dropdown-input "
  >
    <input
      className=""
      list="currencies"
      maxLength={35}
      name=""
      onChange={[Function]}
      placeholder="Add A Currency"
      type="text"
      value="United State Dollar"
    />
    <datalist
      id="currencies"
    >
      <option
        value="United States Dollar"
      >
        USD
      </option>
      <option
        value="Canadian Dollar"
      >
        CAD
      </option>
      <option
        value="Euro"
      >
        EUR
      </option>
      <option
        value="United Arab Emirates Dirham"
      >
        AED
      </option>
      <option
        value="Afghan Afghani"
      >
        AFN
      </option>
      <option
        value="Albanian Lek"
      >
        ALL
      </option>
      <option
        value="Armenian Dram"
      >
        AMD
      </option>
      <option
        value="Netherlands Antillean Guilder"
      >
        ANG
      </option>
      <option
        value="Angolan Kwanza"
      >
        AOA
      </option>
      <option
        value="Argentine Peso"
      >
        ARS
      </option>
      <option
        value="Australian Dollar"
      >
        AUD
      </option>
      <option
        value="Aruban Florin"
      >
        AWG
      </option>
      <option
        value="Azerbaijani Manat"
      >
        AZN
      </option>
      <option
        value="Bosnia-Herzegovina Convertible Mark"
      >
        BAM
      </option>
      <option
        value="Barbadian Dollar"
      >
        BBD
      </option>
      <option
        value="Bangladeshi Taka"
      >
        BDT
      </option>
      <option
        value="Bulgarian Lev"
      >
        BGN
      </option>
      <option
        value="Bahraini Dinar"
      >
        BHD
      </option>
      <option
        value="Burundian Franc"
      >
        BIF
      </option>
      <option
        value="Brunei Dollar"
      >
        BND
      </option>
      <option
        value="Bermudian Dollar"
      >
        BMD
      </option>
      <option
        value="Bolivian Boliviano"
      >
        BOB
      </option>
      <option
        value="Brazilian Real"
      >
        BRL
      </option>
      <option
        value="Bahamian Dollar"
      >
        BSD
      </option>
      <option
        value="Bhutanese Ngultrum"
      >
        BTN
      </option>
      <option
        value="Botswanan Pula"
      >
        BWP
      </option>
      <option
        value="New Belarusian Ruble"
      >
        BYN
      </option>
      <option
        value="Belarusian Ruble"
      >
        BYR
      </option>
      <option
        value="Belize Dollar"
      >
        BZD
      </option>
      <option
        value="Congolese Franc"
      >
        CDF
      </option>
      <option
        value="Swiss Franc"
      >
        CHF
      </option>
      <option
        value="Chilean Peso"
      >
        CLP
      </option>
      <option
        value="Chinese Yuan"
      >
        CNY
      </option>
      <option
        value="Colombian Peso"
      >
        COP
      </option>
      <option
        value="Costa Rican Colón"
      >
        CRC
      </option>
      <option
        value="Cuban Peso"
      >
        CUP
      </option>
      <option
        value="Cape Verdean Escudo"
      >
        CVE
      </option>
      <option
        value="Czech Republic Koruna"
      >
        CZK
      </option>
      <option
        value="Djiboutian Franc"
      >
        DJF
      </option>
      <option
        value="Danish Krone"
      >
        DKK
      </option>
      <option
        value="Dominican Peso"
      >
        DOP
      </option>
      <option
        value="Algerian Dinar"
      >
        DZD
      </option>
      <option
        value="Egyptian Pound"
      >
        EGP
      </option>
      <option
        value="Eritrean Nakfa"
      >
        ERN
      </option>
      <option
        value="Ethiopian Birr"
      >
        ETB
      </option>
      <option
        value="Fijian Dollar"
      >
        FJD
      </option>
      <option
        value="Falkland Island Pound"
      >
        FKP
      </option>
      <option
        value="British Pound Sterling"
      >
        GBP
      </option>
      <option
        value="Georgian Lari"
      >
        GEL
      </option>
      <option
        value="Guernsey Pound"
      >
        GGP
      </option>
      <option
        value="Ghanaian Cedi"
      >
        GHS
      </option>
      <option
        value="Gibraltar Pound"
      >
        GIP
      </option>
      <option
        value="Gambian Dalasi"
      >
        GMD
      </option>
      <option
        value="Guinean Franc"
      >
        GNF
      </option>
      <option
        value="Guatemalan Quetzal"
      >
        GTQ
      </option>
      <option
        value="Guyanaese Dollar"
      >
        GYD
      </option>
      <option
        value="Hong Kong Dollar"
      >
        HKD
      </option>
      <option
        value="Honduran Lempira"
      >
        HNL
      </option>
      <option
        value="Croatian Kuna"
      >
        HRK
      </option>
      <option
        value="Haitian Gourde"
      >
        HTG
      </option>
      <option
        value="Hungarian Forint"
      >
        HUF
      </option>
      <option
        value="Indonesian Rupiah"
      >
        IDR
      </option>
      <option
        value="Israeli New Sheqel"
      >
        ILS
      </option>
      <option
        value="Manx pound"
      >
        IMP
      </option>
      <option
        value="Indian Rupee"
      >
        INR
      </option>
      <option
        value="Iraqi Dinar"
      >
        IQD
      </option>
      <option
        value="Iranian Rial"
      >
        IRR
      </option>
      <option
        value="Icelandic Króna"
      >
        ISK
      </option>
      <option
        value="Jersey Pound"
      >
        JEP
      </option>
      <option
        value="Jamaican Dollar"
      >
        JMD
      </option>
      <option
        value="Jordanian Dinar"
      >
        JOD
      </option>
      <option
        value="Japanese Yen"
      >
        JPY
      </option>
      <option
        value="Kyrgyzstani som"
      >
        KES
      </option>
      <option
        value="Kyrgyzstani Som"
      >
        KGS
      </option>
      <option
        value="Cambodian Riel"
      >
        KHR
      </option>
      <option
        value="Comorian Franc"
      >
        KMF
      </option>
      <option
        value="North Korean Won"
      >
        KPW
      </option>
      <option
        value="South Korean Won"
      >
        KRW
      </option>
      <option
        value="Kuwaiti Dinar"
      >
        KWD
      </option>
      <option
        value="Cayman Islands dollar"
      >
        KYD
      </option>
      <option
        value="Kazakhstani Tenge"
      >
        KZT
      </option>
      <option
        value="Lao kip"
      >
        LAK
      </option>
      <option
        value="Lebanese Pound"
      >
        LBP
      </option>
      <option
        value="Sri Lankan Rupee"
      >
        LKR
      </option>
      <option
        value="Liberian Dollar"
      >
        LRD
      </option>
      <option
        value="Lesotho Loti"
      >
        LSL
      </option>
      <option
        value="Lithuanian Litas"
      >
        LTL
      </option>
      <option
        value="Latvian Lats"
      >
        LVL
      </option>
      <option
        value="Libyan Dinar"
      >
        LYD
      </option>
      <option
        value="Moroccan Dirham"
      >
        MAD
      </option>
      <option
        value="Moldovan Leu"
      >
        MDL
      </option>
      <option
        value="Malagasy Ariary"
      >
        MGA
      </option>
      <option
        value="Macedonian Denar"
      >
        MKD
      </option>
      <option
        value="Myanma Kyat"
      >
        MMK
      </option>
      <option
        value="Mongolian Tugrik"
      >
        MNT
      </option>
      <option
        value="Macanese Pataca"
      >
        MOP
      </option>
      <option
        value="Mauritanian Ouguiya"
      >
        MRO
      </option>
      <option
        value="Mauritian Rupee"
      >
        MUR
      </option>
      <option
        value="Maldivian Rufiyaa"
      >
        MVR
      </option>
      <option
        value="Malawian Kwacha"
      >
        MWK
      </option>
      <option
        value="Mexican Peso"
      >
        MXN
      </option>
      <option
        value="Malaysian Ringgit"
      >
        MYR
      </option>
      <option
        value="Mozambican Metical"
      >
        MZN
      </option>
      <option
        value="Namibian Dollar"
      >
        NAD
      </option>
      <option
        value="Nigerian Naira"
      >
        NGN
      </option>
      <option
        value="Nicaraguan Córdoba"
      >
        NIO
      </option>
      <option
        value="Norwegian Krone"
      >
        NOK
      </option>
      <option
        value="Nepalese Rupee"
      >
        NPR
      </option>
      <option
        value="New Zealand Dollar"
      >
        NZD
      </option>
      <option
        value="Omani Rial"
      >
        OMR
      </option>
      <option
        value="Panamanian Balboa"
      >
        PAB
      </option>
      <option
        value="Peruvian Nuevo Sol"
      >
        PEN
      </option>
      <option
        value="Papua New Guinean Kina"
      >
        PGK
      </option>
      <option
        value="Philippine Peso"
      >
        PHP
      </option>
      <option
        value="Pakistani Rupee"
      >
        PKR
      </option>
      <option
        value="Polish Zloty"
      >
        PLN
      </option>
      <option
        value="Paraguayan Guarani"
      >
        PYG
      </option>
      <option
        value="Qatari Rial"
      >
        QAR
      </option>
      <option
        value="Romanian Leu"
      >
        RON
      </option>
      <option
        value="Serbian Dinar"
      >
        RSD
      </option>
      <option
        value="Russian Ruble"
      >
        RUB
      </option>
      <option
        value="Rwandan Franc"
      >
        RWF
      </option>
      <option
        value="Saudi Riyal"
      >
        SAR
      </option>
      <option
        value="Solomon Islander Dollar"
      >
        SBD
      </option>
      <option
        value="Seychellois Rupee"
      >
        SCR
      </option>
      <option
        value="Sudanese Pound"
      >
        SDG
      </option>
      <option
        value="Swedish Krona"
      >
        SEK
      </option>
      <option
        value="Singapore Dollar"
      >
        SGD
      </option>
      <option
        value="Saint Helena Pound"
      >
        SHP
      </option>
      <option
        value="Sierra Leonean Leone"
      >
        SLL
      </option>
      <option
        value="Somali Shilling"
      >
        SOS
      </option>
      <option
        value="Surinamese Dollar"
      >
        SRD
      </option>
      <option
        value="Sao Tomé and Príncipe Dobra"
      >
        STD
      </option>
      <option
        value="Salvadoran Colón"
      >
        SVC
      </option>
      <option
        value="Syrian Pound"
      >
        SYP
      </option>
      <option
        value="Swazi Lilangeni"
      >
        SZL
      </option>
      <option
        value="Thai Baht"
      >
        THB
      </option>
      <option
        value="Tajikistani Somoni"
      >
        TJS
      </option>
      <option
        value="Turkmenistani Manat"
      >
        TMT
      </option>
      <option
        value="Tunisian Dinar"
      >
        TND
      </option>
      <option
        value="Tongan Paʻanga"
      >
        TOP
      </option>
      <option
        value="Turkish Lira"
      >
        TRY
      </option>
      <option
        value="Trinidad and Tobago Dollar"
      >
        TTD
      </option>
      <option
        value="New Taiwan Dollar"
      >
        TWD
      </option>
      <option
        value="Tanzanian Shilling"
      >
        TZS
      </option>
      <option
        value="Ukrainian Hryvnia"
      >
        UAH
      </option>
      <option
        value="Ugandan Shilling"
      >
        UGX
      </option>
      <option
        value="Uruguayan Peso"
      >
        UYU
      </option>
      <option
        value="Uzbekistan Som"
      >
        UZS
      </option>
      <option
        value="Venezuelan Bolívar Fuerte"
      >
        VEF
      </option>
      <option
        value="Vietnamese Dong"
      >
        VND
      </option>
      <option
        value="Ni-Vanuatu Vatu"
      >
        VUV
      </option>
      <option
        value="Samoan Tala"
      >
        WST
      </option>
      <option
        value="CFA Franc BEAC"
      >
        XAF
      </option>
      <option
        value="East Caribbean Dollar"
      >
        XCD
      </option>
      <option
        value="CFA Franc BCEAO"
      >
        XOF
      </option>
      <option
        value="CFP franc"
      >
        XPF
      </option>
      <option
        value="Yemeni Rial"
      >
        YER
      </option>
      <option
        value="South African Rand"
      >
        ZAR
      </option>
      <option
        value="Zambian Kwacha (pre-2013)"
      >
        ZMK
      </option>
      <option
        value="Zambian Kwacha"
      >
        ZMW
      </option>
      <option
        value="Zimbabwean Dollar"
      >
        ZML
      </option>
    </datalist>
    <img
      alt="dropdown logo"
      src="dropdown.svg"
    />
  </div>
  <button
    className="button-image button--secondary"
    type="submit"
  >
    <img
      alt="button logo"
      src="plus.svg"
    />
  </button>
</form>
`;

exports[`Storyshots CurrencyChooser default 1`] = `
<form
  className="currency-chooser"
  onSubmit={[Function]}
>
  <div
    className="dropdown-input "
  >
    <input
      className=""
      list="currencies"
      maxLength={35}
      name=""
      onChange={[Function]}
      placeholder="Add A Currency"
      type="text"
      value="United State Dollar"
    />
    <datalist
      id="currencies"
    >
      <option
        value="United States Dollar"
      >
        USD
      </option>
      <option
        value="Canadian Dollar"
      >
        CAD
      </option>
      <option
        value="Euro"
      >
        EUR
      </option>
      <option
        value="United Arab Emirates Dirham"
      >
        AED
      </option>
      <option
        value="Afghan Afghani"
      >
        AFN
      </option>
      <option
        value="Albanian Lek"
      >
        ALL
      </option>
      <option
        value="Armenian Dram"
      >
        AMD
      </option>
      <option
        value="Netherlands Antillean Guilder"
      >
        ANG
      </option>
      <option
        value="Angolan Kwanza"
      >
        AOA
      </option>
      <option
        value="Argentine Peso"
      >
        ARS
      </option>
      <option
        value="Australian Dollar"
      >
        AUD
      </option>
      <option
        value="Aruban Florin"
      >
        AWG
      </option>
      <option
        value="Azerbaijani Manat"
      >
        AZN
      </option>
      <option
        value="Bosnia-Herzegovina Convertible Mark"
      >
        BAM
      </option>
      <option
        value="Barbadian Dollar"
      >
        BBD
      </option>
      <option
        value="Bangladeshi Taka"
      >
        BDT
      </option>
      <option
        value="Bulgarian Lev"
      >
        BGN
      </option>
      <option
        value="Bahraini Dinar"
      >
        BHD
      </option>
      <option
        value="Burundian Franc"
      >
        BIF
      </option>
      <option
        value="Brunei Dollar"
      >
        BND
      </option>
      <option
        value="Bermudian Dollar"
      >
        BMD
      </option>
      <option
        value="Bolivian Boliviano"
      >
        BOB
      </option>
      <option
        value="Brazilian Real"
      >
        BRL
      </option>
      <option
        value="Bahamian Dollar"
      >
        BSD
      </option>
      <option
        value="Bhutanese Ngultrum"
      >
        BTN
      </option>
      <option
        value="Botswanan Pula"
      >
        BWP
      </option>
      <option
        value="New Belarusian Ruble"
      >
        BYN
      </option>
      <option
        value="Belarusian Ruble"
      >
        BYR
      </option>
      <option
        value="Belize Dollar"
      >
        BZD
      </option>
      <option
        value="Congolese Franc"
      >
        CDF
      </option>
      <option
        value="Swiss Franc"
      >
        CHF
      </option>
      <option
        value="Chilean Peso"
      >
        CLP
      </option>
      <option
        value="Chinese Yuan"
      >
        CNY
      </option>
      <option
        value="Colombian Peso"
      >
        COP
      </option>
      <option
        value="Costa Rican Colón"
      >
        CRC
      </option>
      <option
        value="Cuban Peso"
      >
        CUP
      </option>
      <option
        value="Cape Verdean Escudo"
      >
        CVE
      </option>
      <option
        value="Czech Republic Koruna"
      >
        CZK
      </option>
      <option
        value="Djiboutian Franc"
      >
        DJF
      </option>
      <option
        value="Danish Krone"
      >
        DKK
      </option>
      <option
        value="Dominican Peso"
      >
        DOP
      </option>
      <option
        value="Algerian Dinar"
      >
        DZD
      </option>
      <option
        value="Egyptian Pound"
      >
        EGP
      </option>
      <option
        value="Eritrean Nakfa"
      >
        ERN
      </option>
      <option
        value="Ethiopian Birr"
      >
        ETB
      </option>
      <option
        value="Fijian Dollar"
      >
        FJD
      </option>
      <option
        value="Falkland Island Pound"
      >
        FKP
      </option>
      <option
        value="British Pound Sterling"
      >
        GBP
      </option>
      <option
        value="Georgian Lari"
      >
        GEL
      </option>
      <option
        value="Guernsey Pound"
      >
        GGP
      </option>
      <option
        value="Ghanaian Cedi"
      >
        GHS
      </option>
      <option
        value="Gibraltar Pound"
      >
        GIP
      </option>
      <option
        value="Gambian Dalasi"
      >
        GMD
      </option>
      <option
        value="Guinean Franc"
      >
        GNF
      </option>
      <option
        value="Guatemalan Quetzal"
      >
        GTQ
      </option>
      <option
        value="Guyanaese Dollar"
      >
        GYD
      </option>
      <option
        value="Hong Kong Dollar"
      >
        HKD
      </option>
      <option
        value="Honduran Lempira"
      >
        HNL
      </option>
      <option
        value="Croatian Kuna"
      >
        HRK
      </option>
      <option
        value="Haitian Gourde"
      >
        HTG
      </option>
      <option
        value="Hungarian Forint"
      >
        HUF
      </option>
      <option
        value="Indonesian Rupiah"
      >
        IDR
      </option>
      <option
        value="Israeli New Sheqel"
      >
        ILS
      </option>
      <option
        value="Manx pound"
      >
        IMP
      </option>
      <option
        value="Indian Rupee"
      >
        INR
      </option>
      <option
        value="Iraqi Dinar"
      >
        IQD
      </option>
      <option
        value="Iranian Rial"
      >
        IRR
      </option>
      <option
        value="Icelandic Króna"
      >
        ISK
      </option>
      <option
        value="Jersey Pound"
      >
        JEP
      </option>
      <option
        value="Jamaican Dollar"
      >
        JMD
      </option>
      <option
        value="Jordanian Dinar"
      >
        JOD
      </option>
      <option
        value="Japanese Yen"
      >
        JPY
      </option>
      <option
        value="Kyrgyzstani som"
      >
        KES
      </option>
      <option
        value="Kyrgyzstani Som"
      >
        KGS
      </option>
      <option
        value="Cambodian Riel"
      >
        KHR
      </option>
      <option
        value="Comorian Franc"
      >
        KMF
      </option>
      <option
        value="North Korean Won"
      >
        KPW
      </option>
      <option
        value="South Korean Won"
      >
        KRW
      </option>
      <option
        value="Kuwaiti Dinar"
      >
        KWD
      </option>
      <option
        value="Cayman Islands dollar"
      >
        KYD
      </option>
      <option
        value="Kazakhstani Tenge"
      >
        KZT
      </option>
      <option
        value="Lao kip"
      >
        LAK
      </option>
      <option
        value="Lebanese Pound"
      >
        LBP
      </option>
      <option
        value="Sri Lankan Rupee"
      >
        LKR
      </option>
      <option
        value="Liberian Dollar"
      >
        LRD
      </option>
      <option
        value="Lesotho Loti"
      >
        LSL
      </option>
      <option
        value="Lithuanian Litas"
      >
        LTL
      </option>
      <option
        value="Latvian Lats"
      >
        LVL
      </option>
      <option
        value="Libyan Dinar"
      >
        LYD
      </option>
      <option
        value="Moroccan Dirham"
      >
        MAD
      </option>
      <option
        value="Moldovan Leu"
      >
        MDL
      </option>
      <option
        value="Malagasy Ariary"
      >
        MGA
      </option>
      <option
        value="Macedonian Denar"
      >
        MKD
      </option>
      <option
        value="Myanma Kyat"
      >
        MMK
      </option>
      <option
        value="Mongolian Tugrik"
      >
        MNT
      </option>
      <option
        value="Macanese Pataca"
      >
        MOP
      </option>
      <option
        value="Mauritanian Ouguiya"
      >
        MRO
      </option>
      <option
        value="Mauritian Rupee"
      >
        MUR
      </option>
      <option
        value="Maldivian Rufiyaa"
      >
        MVR
      </option>
      <option
        value="Malawian Kwacha"
      >
        MWK
      </option>
      <option
        value="Mexican Peso"
      >
        MXN
      </option>
      <option
        value="Malaysian Ringgit"
      >
        MYR
      </option>
      <option
        value="Mozambican Metical"
      >
        MZN
      </option>
      <option
        value="Namibian Dollar"
      >
        NAD
      </option>
      <option
        value="Nigerian Naira"
      >
        NGN
      </option>
      <option
        value="Nicaraguan Córdoba"
      >
        NIO
      </option>
      <option
        value="Norwegian Krone"
      >
        NOK
      </option>
      <option
        value="Nepalese Rupee"
      >
        NPR
      </option>
      <option
        value="New Zealand Dollar"
      >
        NZD
      </option>
      <option
        value="Omani Rial"
      >
        OMR
      </option>
      <option
        value="Panamanian Balboa"
      >
        PAB
      </option>
      <option
        value="Peruvian Nuevo Sol"
      >
        PEN
      </option>
      <option
        value="Papua New Guinean Kina"
      >
        PGK
      </option>
      <option
        value="Philippine Peso"
      >
        PHP
      </option>
      <option
        value="Pakistani Rupee"
      >
        PKR
      </option>
      <option
        value="Polish Zloty"
      >
        PLN
      </option>
      <option
        value="Paraguayan Guarani"
      >
        PYG
      </option>
      <option
        value="Qatari Rial"
      >
        QAR
      </option>
      <option
        value="Romanian Leu"
      >
        RON
      </option>
      <option
        value="Serbian Dinar"
      >
        RSD
      </option>
      <option
        value="Russian Ruble"
      >
        RUB
      </option>
      <option
        value="Rwandan Franc"
      >
        RWF
      </option>
      <option
        value="Saudi Riyal"
      >
        SAR
      </option>
      <option
        value="Solomon Islander Dollar"
      >
        SBD
      </option>
      <option
        value="Seychellois Rupee"
      >
        SCR
      </option>
      <option
        value="Sudanese Pound"
      >
        SDG
      </option>
      <option
        value="Swedish Krona"
      >
        SEK
      </option>
      <option
        value="Singapore Dollar"
      >
        SGD
      </option>
      <option
        value="Saint Helena Pound"
      >
        SHP
      </option>
      <option
        value="Sierra Leonean Leone"
      >
        SLL
      </option>
      <option
        value="Somali Shilling"
      >
        SOS
      </option>
      <option
        value="Surinamese Dollar"
      >
        SRD
      </option>
      <option
        value="Sao Tomé and Príncipe Dobra"
      >
        STD
      </option>
      <option
        value="Salvadoran Colón"
      >
        SVC
      </option>
      <option
        value="Syrian Pound"
      >
        SYP
      </option>
      <option
        value="Swazi Lilangeni"
      >
        SZL
      </option>
      <option
        value="Thai Baht"
      >
        THB
      </option>
      <option
        value="Tajikistani Somoni"
      >
        TJS
      </option>
      <option
        value="Turkmenistani Manat"
      >
        TMT
      </option>
      <option
        value="Tunisian Dinar"
      >
        TND
      </option>
      <option
        value="Tongan Paʻanga"
      >
        TOP
      </option>
      <option
        value="Turkish Lira"
      >
        TRY
      </option>
      <option
        value="Trinidad and Tobago Dollar"
      >
        TTD
      </option>
      <option
        value="New Taiwan Dollar"
      >
        TWD
      </option>
      <option
        value="Tanzanian Shilling"
      >
        TZS
      </option>
      <option
        value="Ukrainian Hryvnia"
      >
        UAH
      </option>
      <option
        value="Ugandan Shilling"
      >
        UGX
      </option>
      <option
        value="Uruguayan Peso"
      >
        UYU
      </option>
      <option
        value="Uzbekistan Som"
      >
        UZS
      </option>
      <option
        value="Venezuelan Bolívar Fuerte"
      >
        VEF
      </option>
      <option
        value="Vietnamese Dong"
      >
        VND
      </option>
      <option
        value="Ni-Vanuatu Vatu"
      >
        VUV
      </option>
      <option
        value="Samoan Tala"
      >
        WST
      </option>
      <option
        value="CFA Franc BEAC"
      >
        XAF
      </option>
      <option
        value="East Caribbean Dollar"
      >
        XCD
      </option>
      <option
        value="CFA Franc BCEAO"
      >
        XOF
      </option>
      <option
        value="CFP franc"
      >
        XPF
      </option>
      <option
        value="Yemeni Rial"
      >
        YER
      </option>
      <option
        value="South African Rand"
      >
        ZAR
      </option>
      <option
        value="Zambian Kwacha (pre-2013)"
      >
        ZMK
      </option>
      <option
        value="Zambian Kwacha"
      >
        ZMW
      </option>
      <option
        value="Zimbabwean Dollar"
      >
        ZML
      </option>
    </datalist>
    <img
      alt="dropdown logo"
      src="dropdown.svg"
    />
  </div>
  <button
    className="button-image button--secondary"
    type="submit"
  >
    <img
      alt="button logo"
      src="plus.svg"
    />
  </button>
</form>
`;

exports[`Storyshots CurrencyForm default 1`] = `
<div
  className="currency-form"
>
  <h5
    className="currency-form__title"
  >
    Send Currency
  </h5>
  <div
    className="currency-form__input"
  >
    <input
      disabled={false}
      name="currency-one"
      onChange={[Function]}
      placeholder="0.00"
      value="0"
    />
    <div
      className="dropdown-input "
    >
      <input
        className=""
        list="selectedCurrencies"
        maxLength={3}
        name="currency-one"
        onChange={[Function]}
        placeholder="NGN"
        type="text"
        value="USD"
      />
      <datalist
        id="selectedCurrencies"
      >
        <option
          value="NGN"
        >
          Nigerian Naira
        </option>
        <option
          value="USD"
        >
          United States Dollar
        </option>
        <option
          value="CAD"
        >
          Canadian Dollar
        </option>
        <option
          value="EUR"
        >
          Euro
        </option>
        <option
          value="AED"
        >
          United Arab Emirates Dirham
        </option>
        <option
          value="BAM"
        >
          Bosnia-Herzegovina Convertible Mark
        </option>
      </datalist>
      <img
        alt="dropdown logo"
        src="dropdown.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots CurrencyLabel default 1`] = `
<li
  className="currency-label"
>
  <p>
    (NGN) Nigerian Naira
  </p>
  <button
    className="button-image button--danger"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="cancel logo"
      src="cancel.svg"
    />
  </button>
</li>
`;

exports[`Storyshots DropdownInput another flavour 1`] = `
<div
  className="dropdown-input dropdown-input--r"
>
  <input
    className=""
    list="currecency"
    maxLength={35}
    name="random"
    onChange={[Function]}
    placeholder="NGN"
    type="text"
    value=""
  />
  <datalist
    id="currecency"
  >
    <option
      value="NGN"
    >
      NGN
    </option>
    <option
      value="USD"
    >
      USD
    </option>
    <option
      value="EUR"
    >
      EUR
    </option>
    <option
      value="BAM"
    >
      BAM
    </option>
  </datalist>
  <img
    alt="dropdown logo"
    src="dropdown.svg"
  />
</div>
`;

exports[`Storyshots DropdownInput plain 1`] = `
<div
  className="dropdown-input "
>
  <input
    className=""
    list="currecency"
    maxLength={35}
    name="random"
    onChange={[Function]}
    placeholder="NGN"
    type="text"
    value=""
  />
  <datalist
    id="currecency"
  >
    <option
      value="NGN"
    >
      NGN
    </option>
    <option
      value="USD"
    >
      USD
    </option>
    <option
      value="EUR"
    >
      EUR
    </option>
    <option
      value="BAM"
    >
      BAM
    </option>
  </datalist>
  <img
    alt="dropdown logo"
    src="dropdown.svg"
  />
</div>
`;

exports[`Storyshots Footer default 1`] = `
<footer
  className="footer"
>
  <p
    className="large"
  >
    Made with
     
    <span>
      ❤
    </span>
     
    by komsic
  </p>
</footer>
`;

exports[`Storyshots Header default 1`] = `
<div
  className="header-container"
>
  <header
    className="header"
  >
    <h1
      className="header__title"
    >
      XChanger
    </h1>
    <button
      className="button button--primary"
      onClick={[Function]}
      type="button"
    >
      Manage Currencies
    </button>
  </header>
</div>
`;

exports[`Storyshots Hero default 1`] = `
<div
  className="hero-container"
>
  <div
    className="hero"
  >
    <h3
      className="medium"
    >
      Check Currency Rate
    </h3>
    <div
      className="hero__body"
    >
      <div
        className="currency-form"
      >
        <h5
          className="currency-form__title"
        >
          Send Currency
        </h5>
        <div
          className="currency-form__input"
        >
          <input
            disabled={false}
            name="currencyOne"
            onChange={[Function]}
            placeholder="0.00"
            value="0"
          />
          <div
            className="dropdown-input "
          >
            <input
              className=""
              list="selected-currencies"
              maxLength={3}
              name="currencyOne"
              onChange={[Function]}
              placeholder="NGN"
              type="text"
              value="NGN"
            />
            <datalist
              id="selected-currencies"
            >
              <option
                value="NGN"
              >
                Nigerian Naira
              </option>
              <option
                value="USD"
              >
                United States Dollar
              </option>
              <option
                value="CAD"
              >
                Canadian Dollar
              </option>
              <option
                value="EUR"
              >
                Euro
              </option>
              <option
                value="AED"
              >
                United Arab Emirates Dirham
              </option>
              <option
                value="BAM"
              >
                Bosnia-Herzegovina Convertible Mark
              </option>
            </datalist>
            <img
              alt="dropdown logo"
              src="dropdown.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="currency-form"
      >
        <h5
          className="currency-form__title"
        >
          Receive Currency
        </h5>
        <div
          className="currency-form__input"
        >
          <input
            disabled={false}
            name="currencyTwo"
            onChange={[Function]}
            placeholder="0.00"
            value="0"
          />
          <div
            className="dropdown-input "
          >
            <input
              className=""
              list="selected-currencies"
              maxLength={3}
              name="currencyTwo"
              onChange={[Function]}
              placeholder="NGN"
              type="text"
              value="USD"
            />
            <datalist
              id="selected-currencies"
            >
              <option
                value="NGN"
              >
                Nigerian Naira
              </option>
              <option
                value="USD"
              >
                United States Dollar
              </option>
              <option
                value="CAD"
              >
                Canadian Dollar
              </option>
              <option
                value="EUR"
              >
                Euro
              </option>
              <option
                value="AED"
              >
                United Arab Emirates Dirham
              </option>
              <option
                value="BAM"
              >
                Bosnia-Herzegovina Convertible Mark
              </option>
            </datalist>
            <img
              alt="dropdown logo"
              src="dropdown.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Main default 1`] = `
<main
  className="main"
>
  <div
    className="main__header"
  >
    <h2
      className="medium"
    >
      Exchange Rates
    </h2>
    <span>
      <label>
        Base Currency
      </label>
      <div
        className="dropdown-input dropdown-input--r"
      >
        <input
          className=""
          list="base-currency"
          maxLength={3}
          name=""
          onChange={[Function]}
          placeholder="NGN"
          type="text"
          value="NGN"
        />
        <datalist
          id="base-currency"
        >
          <option
            value="USD"
          >
            United States Dollar
          </option>
          <option
            value="CAD"
          >
            Canadian Dollar
          </option>
          <option
            value="EUR"
          >
            Euro
          </option>
          <option
            value="AED"
          >
            United Arab Emirates Dirham
          </option>
          <option
            value="AFN"
          >
            Afghan Afghani
          </option>
          <option
            value="ALL"
          >
            Albanian Lek
          </option>
          <option
            value="AMD"
          >
            Armenian Dram
          </option>
          <option
            value="ANG"
          >
            Netherlands Antillean Guilder
          </option>
          <option
            value="AOA"
          >
            Angolan Kwanza
          </option>
          <option
            value="ARS"
          >
            Argentine Peso
          </option>
          <option
            value="AUD"
          >
            Australian Dollar
          </option>
          <option
            value="AWG"
          >
            Aruban Florin
          </option>
          <option
            value="AZN"
          >
            Azerbaijani Manat
          </option>
          <option
            value="BAM"
          >
            Bosnia-Herzegovina Convertible Mark
          </option>
          <option
            value="BBD"
          >
            Barbadian Dollar
          </option>
          <option
            value="BDT"
          >
            Bangladeshi Taka
          </option>
          <option
            value="BGN"
          >
            Bulgarian Lev
          </option>
          <option
            value="BHD"
          >
            Bahraini Dinar
          </option>
          <option
            value="BIF"
          >
            Burundian Franc
          </option>
          <option
            value="BND"
          >
            Brunei Dollar
          </option>
          <option
            value="BMD"
          >
            Bermudian Dollar
          </option>
          <option
            value="BOB"
          >
            Bolivian Boliviano
          </option>
          <option
            value="BRL"
          >
            Brazilian Real
          </option>
          <option
            value="BSD"
          >
            Bahamian Dollar
          </option>
          <option
            value="BTN"
          >
            Bhutanese Ngultrum
          </option>
          <option
            value="BWP"
          >
            Botswanan Pula
          </option>
          <option
            value="BYN"
          >
            New Belarusian Ruble
          </option>
          <option
            value="BYR"
          >
            Belarusian Ruble
          </option>
          <option
            value="BZD"
          >
            Belize Dollar
          </option>
          <option
            value="CDF"
          >
            Congolese Franc
          </option>
          <option
            value="CHF"
          >
            Swiss Franc
          </option>
          <option
            value="CLP"
          >
            Chilean Peso
          </option>
          <option
            value="CNY"
          >
            Chinese Yuan
          </option>
          <option
            value="COP"
          >
            Colombian Peso
          </option>
          <option
            value="CRC"
          >
            Costa Rican Colón
          </option>
          <option
            value="CUP"
          >
            Cuban Peso
          </option>
          <option
            value="CVE"
          >
            Cape Verdean Escudo
          </option>
          <option
            value="CZK"
          >
            Czech Republic Koruna
          </option>
          <option
            value="DJF"
          >
            Djiboutian Franc
          </option>
          <option
            value="DKK"
          >
            Danish Krone
          </option>
          <option
            value="DOP"
          >
            Dominican Peso
          </option>
          <option
            value="DZD"
          >
            Algerian Dinar
          </option>
          <option
            value="EGP"
          >
            Egyptian Pound
          </option>
          <option
            value="ERN"
          >
            Eritrean Nakfa
          </option>
          <option
            value="ETB"
          >
            Ethiopian Birr
          </option>
          <option
            value="FJD"
          >
            Fijian Dollar
          </option>
          <option
            value="FKP"
          >
            Falkland Island Pound
          </option>
          <option
            value="GBP"
          >
            British Pound Sterling
          </option>
          <option
            value="GEL"
          >
            Georgian Lari
          </option>
          <option
            value="GGP"
          >
            Guernsey Pound
          </option>
          <option
            value="GHS"
          >
            Ghanaian Cedi
          </option>
          <option
            value="GIP"
          >
            Gibraltar Pound
          </option>
          <option
            value="GMD"
          >
            Gambian Dalasi
          </option>
          <option
            value="GNF"
          >
            Guinean Franc
          </option>
          <option
            value="GTQ"
          >
            Guatemalan Quetzal
          </option>
          <option
            value="GYD"
          >
            Guyanaese Dollar
          </option>
          <option
            value="HKD"
          >
            Hong Kong Dollar
          </option>
          <option
            value="HNL"
          >
            Honduran Lempira
          </option>
          <option
            value="HRK"
          >
            Croatian Kuna
          </option>
          <option
            value="HTG"
          >
            Haitian Gourde
          </option>
          <option
            value="HUF"
          >
            Hungarian Forint
          </option>
          <option
            value="IDR"
          >
            Indonesian Rupiah
          </option>
          <option
            value="ILS"
          >
            Israeli New Sheqel
          </option>
          <option
            value="IMP"
          >
            Manx pound
          </option>
          <option
            value="INR"
          >
            Indian Rupee
          </option>
          <option
            value="IQD"
          >
            Iraqi Dinar
          </option>
          <option
            value="IRR"
          >
            Iranian Rial
          </option>
          <option
            value="ISK"
          >
            Icelandic Króna
          </option>
          <option
            value="JEP"
          >
            Jersey Pound
          </option>
          <option
            value="JMD"
          >
            Jamaican Dollar
          </option>
          <option
            value="JOD"
          >
            Jordanian Dinar
          </option>
          <option
            value="JPY"
          >
            Japanese Yen
          </option>
          <option
            value="KES"
          >
            Kyrgyzstani som
          </option>
          <option
            value="KGS"
          >
            Kyrgyzstani Som
          </option>
          <option
            value="KHR"
          >
            Cambodian Riel
          </option>
          <option
            value="KMF"
          >
            Comorian Franc
          </option>
          <option
            value="KPW"
          >
            North Korean Won
          </option>
          <option
            value="KRW"
          >
            South Korean Won
          </option>
          <option
            value="KWD"
          >
            Kuwaiti Dinar
          </option>
          <option
            value="KYD"
          >
            Cayman Islands dollar
          </option>
          <option
            value="KZT"
          >
            Kazakhstani Tenge
          </option>
          <option
            value="LAK"
          >
            Lao kip
          </option>
          <option
            value="LBP"
          >
            Lebanese Pound
          </option>
          <option
            value="LKR"
          >
            Sri Lankan Rupee
          </option>
          <option
            value="LRD"
          >
            Liberian Dollar
          </option>
          <option
            value="LSL"
          >
            Lesotho Loti
          </option>
          <option
            value="LTL"
          >
            Lithuanian Litas
          </option>
          <option
            value="LVL"
          >
            Latvian Lats
          </option>
          <option
            value="LYD"
          >
            Libyan Dinar
          </option>
          <option
            value="MAD"
          >
            Moroccan Dirham
          </option>
          <option
            value="MDL"
          >
            Moldovan Leu
          </option>
          <option
            value="MGA"
          >
            Malagasy Ariary
          </option>
          <option
            value="MKD"
          >
            Macedonian Denar
          </option>
          <option
            value="MMK"
          >
            Myanma Kyat
          </option>
          <option
            value="MNT"
          >
            Mongolian Tugrik
          </option>
          <option
            value="MOP"
          >
            Macanese Pataca
          </option>
          <option
            value="MRO"
          >
            Mauritanian Ouguiya
          </option>
          <option
            value="MUR"
          >
            Mauritian Rupee
          </option>
          <option
            value="MVR"
          >
            Maldivian Rufiyaa
          </option>
          <option
            value="MWK"
          >
            Malawian Kwacha
          </option>
          <option
            value="MXN"
          >
            Mexican Peso
          </option>
          <option
            value="MYR"
          >
            Malaysian Ringgit
          </option>
          <option
            value="MZN"
          >
            Mozambican Metical
          </option>
          <option
            value="NAD"
          >
            Namibian Dollar
          </option>
          <option
            value="NGN"
          >
            Nigerian Naira
          </option>
          <option
            value="NIO"
          >
            Nicaraguan Córdoba
          </option>
          <option
            value="NOK"
          >
            Norwegian Krone
          </option>
          <option
            value="NPR"
          >
            Nepalese Rupee
          </option>
          <option
            value="NZD"
          >
            New Zealand Dollar
          </option>
          <option
            value="OMR"
          >
            Omani Rial
          </option>
          <option
            value="PAB"
          >
            Panamanian Balboa
          </option>
          <option
            value="PEN"
          >
            Peruvian Nuevo Sol
          </option>
          <option
            value="PGK"
          >
            Papua New Guinean Kina
          </option>
          <option
            value="PHP"
          >
            Philippine Peso
          </option>
          <option
            value="PKR"
          >
            Pakistani Rupee
          </option>
          <option
            value="PLN"
          >
            Polish Zloty
          </option>
          <option
            value="PYG"
          >
            Paraguayan Guarani
          </option>
          <option
            value="QAR"
          >
            Qatari Rial
          </option>
          <option
            value="RON"
          >
            Romanian Leu
          </option>
          <option
            value="RSD"
          >
            Serbian Dinar
          </option>
          <option
            value="RUB"
          >
            Russian Ruble
          </option>
          <option
            value="RWF"
          >
            Rwandan Franc
          </option>
          <option
            value="SAR"
          >
            Saudi Riyal
          </option>
          <option
            value="SBD"
          >
            Solomon Islander Dollar
          </option>
          <option
            value="SCR"
          >
            Seychellois Rupee
          </option>
          <option
            value="SDG"
          >
            Sudanese Pound
          </option>
          <option
            value="SEK"
          >
            Swedish Krona
          </option>
          <option
            value="SGD"
          >
            Singapore Dollar
          </option>
          <option
            value="SHP"
          >
            Saint Helena Pound
          </option>
          <option
            value="SLL"
          >
            Sierra Leonean Leone
          </option>
          <option
            value="SOS"
          >
            Somali Shilling
          </option>
          <option
            value="SRD"
          >
            Surinamese Dollar
          </option>
          <option
            value="STD"
          >
            Sao Tomé and Príncipe Dobra
          </option>
          <option
            value="SVC"
          >
            Salvadoran Colón
          </option>
          <option
            value="SYP"
          >
            Syrian Pound
          </option>
          <option
            value="SZL"
          >
            Swazi Lilangeni
          </option>
          <option
            value="THB"
          >
            Thai Baht
          </option>
          <option
            value="TJS"
          >
            Tajikistani Somoni
          </option>
          <option
            value="TMT"
          >
            Turkmenistani Manat
          </option>
          <option
            value="TND"
          >
            Tunisian Dinar
          </option>
          <option
            value="TOP"
          >
            Tongan Paʻanga
          </option>
          <option
            value="TRY"
          >
            Turkish Lira
          </option>
          <option
            value="TTD"
          >
            Trinidad and Tobago Dollar
          </option>
          <option
            value="TWD"
          >
            New Taiwan Dollar
          </option>
          <option
            value="TZS"
          >
            Tanzanian Shilling
          </option>
          <option
            value="UAH"
          >
            Ukrainian Hryvnia
          </option>
          <option
            value="UGX"
          >
            Ugandan Shilling
          </option>
          <option
            value="UYU"
          >
            Uruguayan Peso
          </option>
          <option
            value="UZS"
          >
            Uzbekistan Som
          </option>
          <option
            value="VEF"
          >
            Venezuelan Bolívar Fuerte
          </option>
          <option
            value="VND"
          >
            Vietnamese Dong
          </option>
          <option
            value="VUV"
          >
            Ni-Vanuatu Vatu
          </option>
          <option
            value="WST"
          >
            Samoan Tala
          </option>
          <option
            value="XAF"
          >
            CFA Franc BEAC
          </option>
          <option
            value="XCD"
          >
            East Caribbean Dollar
          </option>
          <option
            value="XOF"
          >
            CFA Franc BCEAO
          </option>
          <option
            value="XPF"
          >
            CFP franc
          </option>
          <option
            value="YER"
          >
            Yemeni Rial
          </option>
          <option
            value="ZAR"
          >
            South African Rand
          </option>
          <option
            value="ZMK"
          >
            Zambian Kwacha (pre-2013)
          </option>
          <option
            value="ZMW"
          >
            Zambian Kwacha
          </option>
          <option
            value="ZML"
          >
            Zimbabwean Dollar
          </option>
        </datalist>
        <img
          alt="dropdown logo"
          src="dropdown.svg"
        />
      </div>
    </span>
  </div>
  <ul
    className="main__body"
  >
    <li
      className="card"
    >
      <div
        className="card__header"
      >
        <p
          className="medium"
        >
          $
        </p>
        <p
          className="large"
        >
          USD
        </p>
      </div>
      <p
        className="medium"
      >
        United States Dollar
      </p>
      <p
        className="large"
      >
        1 NGN - 0.002762 USD
      </p>
    </li>
    <li
      className="card"
    >
      <div
        className="card__header"
      >
        <p
          className="medium"
        >
          CA$
        </p>
        <p
          className="large"
        >
          CAD
        </p>
      </div>
      <p
        className="medium"
      >
        Canadian Dollar
      </p>
      <p
        className="large"
      >
        1 NGN - 0.003644 CAD
      </p>
    </li>
    <li
      className="card"
    >
      <div
        className="card__header"
      >
        <p
          className="medium"
        >
          €
        </p>
        <p
          className="large"
        >
          EUR
        </p>
      </div>
      <p
        className="medium"
      >
        Euro
      </p>
      <p
        className="large"
      >
        1 NGN - 0.002494 EUR
      </p>
    </li>
    <li
      className="card"
    >
      <div
        className="card__header"
      >
        <p
          className="medium"
        >
          AED
        </p>
        <p
          className="large"
        >
          AED
        </p>
      </div>
      <p
        className="medium"
      >
        United Arab Emirates Dirham
      </p>
      <p
        className="large"
      >
        1 NGN - 0.010147 AED
      </p>
    </li>
    <li
      className="card"
    >
      <div
        className="card__header"
      >
        <p
          className="medium"
        >
          KM
        </p>
        <p
          className="large"
        >
          BAM
        </p>
      </div>
      <p
        className="medium"
      >
        Bosnia-Herzegovina Convertible Mark
      </p>
      <p
        className="large"
      >
        1 NGN - 0.004900 BAM
      </p>
    </li>
  </ul>
</main>
`;

exports[`Storyshots Main empty state 1`] = `
<main
  className="main"
>
  <div
    className="main__header"
  >
    <h2
      className="medium"
    >
      Exchange Rates
    </h2>
    <span>
      <label>
        Base Currency
      </label>
      <div
        className="dropdown-input dropdown-input--r"
      >
        <input
          className=""
          list="base-currency"
          maxLength={3}
          name=""
          onChange={[Function]}
          placeholder="NGN"
          type="text"
          value="NGN"
        />
        <datalist
          id="base-currency"
        >
          <option
            value="USD"
          >
            United States Dollar
          </option>
          <option
            value="CAD"
          >
            Canadian Dollar
          </option>
          <option
            value="EUR"
          >
            Euro
          </option>
          <option
            value="AED"
          >
            United Arab Emirates Dirham
          </option>
          <option
            value="AFN"
          >
            Afghan Afghani
          </option>
          <option
            value="ALL"
          >
            Albanian Lek
          </option>
          <option
            value="AMD"
          >
            Armenian Dram
          </option>
          <option
            value="ANG"
          >
            Netherlands Antillean Guilder
          </option>
          <option
            value="AOA"
          >
            Angolan Kwanza
          </option>
          <option
            value="ARS"
          >
            Argentine Peso
          </option>
          <option
            value="AUD"
          >
            Australian Dollar
          </option>
          <option
            value="AWG"
          >
            Aruban Florin
          </option>
          <option
            value="AZN"
          >
            Azerbaijani Manat
          </option>
          <option
            value="BAM"
          >
            Bosnia-Herzegovina Convertible Mark
          </option>
          <option
            value="BBD"
          >
            Barbadian Dollar
          </option>
          <option
            value="BDT"
          >
            Bangladeshi Taka
          </option>
          <option
            value="BGN"
          >
            Bulgarian Lev
          </option>
          <option
            value="BHD"
          >
            Bahraini Dinar
          </option>
          <option
            value="BIF"
          >
            Burundian Franc
          </option>
          <option
            value="BND"
          >
            Brunei Dollar
          </option>
          <option
            value="BMD"
          >
            Bermudian Dollar
          </option>
          <option
            value="BOB"
          >
            Bolivian Boliviano
          </option>
          <option
            value="BRL"
          >
            Brazilian Real
          </option>
          <option
            value="BSD"
          >
            Bahamian Dollar
          </option>
          <option
            value="BTN"
          >
            Bhutanese Ngultrum
          </option>
          <option
            value="BWP"
          >
            Botswanan Pula
          </option>
          <option
            value="BYN"
          >
            New Belarusian Ruble
          </option>
          <option
            value="BYR"
          >
            Belarusian Ruble
          </option>
          <option
            value="BZD"
          >
            Belize Dollar
          </option>
          <option
            value="CDF"
          >
            Congolese Franc
          </option>
          <option
            value="CHF"
          >
            Swiss Franc
          </option>
          <option
            value="CLP"
          >
            Chilean Peso
          </option>
          <option
            value="CNY"
          >
            Chinese Yuan
          </option>
          <option
            value="COP"
          >
            Colombian Peso
          </option>
          <option
            value="CRC"
          >
            Costa Rican Colón
          </option>
          <option
            value="CUP"
          >
            Cuban Peso
          </option>
          <option
            value="CVE"
          >
            Cape Verdean Escudo
          </option>
          <option
            value="CZK"
          >
            Czech Republic Koruna
          </option>
          <option
            value="DJF"
          >
            Djiboutian Franc
          </option>
          <option
            value="DKK"
          >
            Danish Krone
          </option>
          <option
            value="DOP"
          >
            Dominican Peso
          </option>
          <option
            value="DZD"
          >
            Algerian Dinar
          </option>
          <option
            value="EGP"
          >
            Egyptian Pound
          </option>
          <option
            value="ERN"
          >
            Eritrean Nakfa
          </option>
          <option
            value="ETB"
          >
            Ethiopian Birr
          </option>
          <option
            value="FJD"
          >
            Fijian Dollar
          </option>
          <option
            value="FKP"
          >
            Falkland Island Pound
          </option>
          <option
            value="GBP"
          >
            British Pound Sterling
          </option>
          <option
            value="GEL"
          >
            Georgian Lari
          </option>
          <option
            value="GGP"
          >
            Guernsey Pound
          </option>
          <option
            value="GHS"
          >
            Ghanaian Cedi
          </option>
          <option
            value="GIP"
          >
            Gibraltar Pound
          </option>
          <option
            value="GMD"
          >
            Gambian Dalasi
          </option>
          <option
            value="GNF"
          >
            Guinean Franc
          </option>
          <option
            value="GTQ"
          >
            Guatemalan Quetzal
          </option>
          <option
            value="GYD"
          >
            Guyanaese Dollar
          </option>
          <option
            value="HKD"
          >
            Hong Kong Dollar
          </option>
          <option
            value="HNL"
          >
            Honduran Lempira
          </option>
          <option
            value="HRK"
          >
            Croatian Kuna
          </option>
          <option
            value="HTG"
          >
            Haitian Gourde
          </option>
          <option
            value="HUF"
          >
            Hungarian Forint
          </option>
          <option
            value="IDR"
          >
            Indonesian Rupiah
          </option>
          <option
            value="ILS"
          >
            Israeli New Sheqel
          </option>
          <option
            value="IMP"
          >
            Manx pound
          </option>
          <option
            value="INR"
          >
            Indian Rupee
          </option>
          <option
            value="IQD"
          >
            Iraqi Dinar
          </option>
          <option
            value="IRR"
          >
            Iranian Rial
          </option>
          <option
            value="ISK"
          >
            Icelandic Króna
          </option>
          <option
            value="JEP"
          >
            Jersey Pound
          </option>
          <option
            value="JMD"
          >
            Jamaican Dollar
          </option>
          <option
            value="JOD"
          >
            Jordanian Dinar
          </option>
          <option
            value="JPY"
          >
            Japanese Yen
          </option>
          <option
            value="KES"
          >
            Kyrgyzstani som
          </option>
          <option
            value="KGS"
          >
            Kyrgyzstani Som
          </option>
          <option
            value="KHR"
          >
            Cambodian Riel
          </option>
          <option
            value="KMF"
          >
            Comorian Franc
          </option>
          <option
            value="KPW"
          >
            North Korean Won
          </option>
          <option
            value="KRW"
          >
            South Korean Won
          </option>
          <option
            value="KWD"
          >
            Kuwaiti Dinar
          </option>
          <option
            value="KYD"
          >
            Cayman Islands dollar
          </option>
          <option
            value="KZT"
          >
            Kazakhstani Tenge
          </option>
          <option
            value="LAK"
          >
            Lao kip
          </option>
          <option
            value="LBP"
          >
            Lebanese Pound
          </option>
          <option
            value="LKR"
          >
            Sri Lankan Rupee
          </option>
          <option
            value="LRD"
          >
            Liberian Dollar
          </option>
          <option
            value="LSL"
          >
            Lesotho Loti
          </option>
          <option
            value="LTL"
          >
            Lithuanian Litas
          </option>
          <option
            value="LVL"
          >
            Latvian Lats
          </option>
          <option
            value="LYD"
          >
            Libyan Dinar
          </option>
          <option
            value="MAD"
          >
            Moroccan Dirham
          </option>
          <option
            value="MDL"
          >
            Moldovan Leu
          </option>
          <option
            value="MGA"
          >
            Malagasy Ariary
          </option>
          <option
            value="MKD"
          >
            Macedonian Denar
          </option>
          <option
            value="MMK"
          >
            Myanma Kyat
          </option>
          <option
            value="MNT"
          >
            Mongolian Tugrik
          </option>
          <option
            value="MOP"
          >
            Macanese Pataca
          </option>
          <option
            value="MRO"
          >
            Mauritanian Ouguiya
          </option>
          <option
            value="MUR"
          >
            Mauritian Rupee
          </option>
          <option
            value="MVR"
          >
            Maldivian Rufiyaa
          </option>
          <option
            value="MWK"
          >
            Malawian Kwacha
          </option>
          <option
            value="MXN"
          >
            Mexican Peso
          </option>
          <option
            value="MYR"
          >
            Malaysian Ringgit
          </option>
          <option
            value="MZN"
          >
            Mozambican Metical
          </option>
          <option
            value="NAD"
          >
            Namibian Dollar
          </option>
          <option
            value="NGN"
          >
            Nigerian Naira
          </option>
          <option
            value="NIO"
          >
            Nicaraguan Córdoba
          </option>
          <option
            value="NOK"
          >
            Norwegian Krone
          </option>
          <option
            value="NPR"
          >
            Nepalese Rupee
          </option>
          <option
            value="NZD"
          >
            New Zealand Dollar
          </option>
          <option
            value="OMR"
          >
            Omani Rial
          </option>
          <option
            value="PAB"
          >
            Panamanian Balboa
          </option>
          <option
            value="PEN"
          >
            Peruvian Nuevo Sol
          </option>
          <option
            value="PGK"
          >
            Papua New Guinean Kina
          </option>
          <option
            value="PHP"
          >
            Philippine Peso
          </option>
          <option
            value="PKR"
          >
            Pakistani Rupee
          </option>
          <option
            value="PLN"
          >
            Polish Zloty
          </option>
          <option
            value="PYG"
          >
            Paraguayan Guarani
          </option>
          <option
            value="QAR"
          >
            Qatari Rial
          </option>
          <option
            value="RON"
          >
            Romanian Leu
          </option>
          <option
            value="RSD"
          >
            Serbian Dinar
          </option>
          <option
            value="RUB"
          >
            Russian Ruble
          </option>
          <option
            value="RWF"
          >
            Rwandan Franc
          </option>
          <option
            value="SAR"
          >
            Saudi Riyal
          </option>
          <option
            value="SBD"
          >
            Solomon Islander Dollar
          </option>
          <option
            value="SCR"
          >
            Seychellois Rupee
          </option>
          <option
            value="SDG"
          >
            Sudanese Pound
          </option>
          <option
            value="SEK"
          >
            Swedish Krona
          </option>
          <option
            value="SGD"
          >
            Singapore Dollar
          </option>
          <option
            value="SHP"
          >
            Saint Helena Pound
          </option>
          <option
            value="SLL"
          >
            Sierra Leonean Leone
          </option>
          <option
            value="SOS"
          >
            Somali Shilling
          </option>
          <option
            value="SRD"
          >
            Surinamese Dollar
          </option>
          <option
            value="STD"
          >
            Sao Tomé and Príncipe Dobra
          </option>
          <option
            value="SVC"
          >
            Salvadoran Colón
          </option>
          <option
            value="SYP"
          >
            Syrian Pound
          </option>
          <option
            value="SZL"
          >
            Swazi Lilangeni
          </option>
          <option
            value="THB"
          >
            Thai Baht
          </option>
          <option
            value="TJS"
          >
            Tajikistani Somoni
          </option>
          <option
            value="TMT"
          >
            Turkmenistani Manat
          </option>
          <option
            value="TND"
          >
            Tunisian Dinar
          </option>
          <option
            value="TOP"
          >
            Tongan Paʻanga
          </option>
          <option
            value="TRY"
          >
            Turkish Lira
          </option>
          <option
            value="TTD"
          >
            Trinidad and Tobago Dollar
          </option>
          <option
            value="TWD"
          >
            New Taiwan Dollar
          </option>
          <option
            value="TZS"
          >
            Tanzanian Shilling
          </option>
          <option
            value="UAH"
          >
            Ukrainian Hryvnia
          </option>
          <option
            value="UGX"
          >
            Ugandan Shilling
          </option>
          <option
            value="UYU"
          >
            Uruguayan Peso
          </option>
          <option
            value="UZS"
          >
            Uzbekistan Som
          </option>
          <option
            value="VEF"
          >
            Venezuelan Bolívar Fuerte
          </option>
          <option
            value="VND"
          >
            Vietnamese Dong
          </option>
          <option
            value="VUV"
          >
            Ni-Vanuatu Vatu
          </option>
          <option
            value="WST"
          >
            Samoan Tala
          </option>
          <option
            value="XAF"
          >
            CFA Franc BEAC
          </option>
          <option
            value="XCD"
          >
            East Caribbean Dollar
          </option>
          <option
            value="XOF"
          >
            CFA Franc BCEAO
          </option>
          <option
            value="XPF"
          >
            CFP franc
          </option>
          <option
            value="YER"
          >
            Yemeni Rial
          </option>
          <option
            value="ZAR"
          >
            South African Rand
          </option>
          <option
            value="ZMK"
          >
            Zambian Kwacha (pre-2013)
          </option>
          <option
            value="ZMW"
          >
            Zambian Kwacha
          </option>
          <option
            value="ZML"
          >
            Zimbabwean Dollar
          </option>
        </datalist>
        <img
          alt="dropdown logo"
          src="dropdown.svg"
        />
      </div>
    </span>
  </div>
  <div
    className="empty-state"
  >
    <p>
      You haven't selected any currency.  Please click
    </p>
    <p
      className="emp"
    >
      Manage Currencies
    </p>
    <p>
      to add currencies.
    </p>
  </div>
</main>
`;

exports[`Storyshots Modal default 1`] = `
<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Show Modal
  </button>
  <div
    className="modal is-close"
  >
    <div>
      <button
        onClick={[Function]}
        type="button"
      >
        Modal Cancel
      </button>
    </div>
  </div>
</div>
`;
